--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^4.14.0"
+    "node-sass": "^4.14.0",
+    "uglify-js-brunch": "^2.10.0"
   }
 }
